log4cplusincdir = $(includedir)
nobase_log4cplusinc_HEADERS = \
    log4cplus/appender.h \
	log4cplus/config.hxx \
	log4cplus/config/win32.h \
	log4cplus/config/macosx.h \
    log4cplus/config/defines.hxx \
	log4cplus/configurator.h \
	log4cplus/consoleappender.h \
	log4cplus/fileappender.h \
	log4cplus/fstreams.h \
	log4cplus/hierarchy.h \
	log4cplus/hierarchylocker.h \
	log4cplus/layout.h \
	log4cplus/logger.h \
	log4cplus/loggingmacros.h \
	log4cplus/loglevel.h \
	log4cplus/ndc.h \
	log4cplus/nullappender.h \
	log4cplus/socketappender.h \
	log4cplus/streams.h \
	log4cplus/syslogappender.h \
	log4cplus/tstring.h \
	log4cplus/version.h \
	log4cplus/helpers/appenderattachableimpl.h \
	log4cplus/helpers/loglog.h \
	log4cplus/helpers/logloguser.h \
	log4cplus/helpers/pointer.h \
	log4cplus/helpers/property.h \
	log4cplus/helpers/sleep.h \
	log4cplus/helpers/socketbuffer.h \
	log4cplus/helpers/socket.h \
	log4cplus/helpers/stringhelper.h \
	log4cplus/helpers/syncprims.h \
	log4cplus/helpers/syncprims-pthreads.h \
	log4cplus/helpers/thread-config.h \
	log4cplus/helpers/threads.h \
	log4cplus/helpers/timehelper.h \
	log4cplus/spi/appenderattachable.h \
	log4cplus/spi/factory.h \
	log4cplus/spi/filter.h \
	log4cplus/spi/loggerfactory.h \
	log4cplus/spi/loggerimpl.h \
	log4cplus/spi/loggingevent.h \
	log4cplus/spi/objectregistry.h \
	log4cplus/spi/rootlogger.h
