dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/logger.cxx)
AM_INIT_AUTOMAKE(log4cplus, 0.9.3)
AM_CONFIG_HEADER(include/log4cplus/config.h)

#
# +1 : ? : +1  == new interface that does not break old one
# +1 : ? : 0   == new interfac that breaks old one
#  ? : ? : 0   == no new interfaces, but breaks apps
#  ? :+1 : ?   == just some internal changes, nothing breaks but might work
#                 better
# CURRENT : REVISION : AGE
LT_VERSION=1:0:0
AC_SUBST(LT_VERSION)

AC_PROG_LIBTOOL

dnl Checks for programs.
AC_ISC_POSIX

dnl first check for c/c++ compilers
AC_PROG_CXX
AC_PROG_CXXCPP
AC_LANG_CPLUSPLUS

dnl Checks for libraries.
AC_PROG_RANLIB 

dnl Checks for header files.
AC_STDC_HEADERS
AC_HAVE_HEADERS(strstream.h strstream sstream syslog.h)

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_STRFTIME
AC_STRUCT_TM

AC_OUTPUT([Makefile 
           src/Makefile 
           tests/Makefile 
           tests/appender_test/Makefile 
           tests/fileappender_test/Makefile 
           tests/hierarchy_test/Makefile 
           tests/loglog_test/Makefile 
           tests/ndc_test/Makefile 
           tests/ostream_test/Makefile
           tests/patternlayout_test/Makefile 
           tests/priority_test/Makefile 
	   tests/propertyconfig_test/Makefile
	   tests/socket_test/Makefile
           tests/thread_test/Makefile, ])

